Update to 1.16.3 (#11)
* code cleanup

* port to 1.16.3

* bump version and update rei