@@ -1,12 +1,10 @@
 package de.siphalor.spiceoffabric.foodhistory;
 
-import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.PacketByteBuf;
 import net.minecraft.text.BaseText;
-import net.minecraft.text.Text;
 import net.minecraft.text.TranslatableText;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.registry.Registry;
@@ -71,6 +69,6 @@ public class FoodHistoryEntry {
 
 	@Override
 	public int hashCode() {
-		return new Integer(itemId).hashCode();
+		return Integer.valueOf(itemId).hashCode();
 	}
 }
